Prevent clickables from auto-wrapping

--- a/src/index.less
+++ b/src/index.less
@@ -336,6 +336,7 @@ body {
       > * {
         position: absolute;
         pointer-events: auto;
+        white-space: nowrap;
         body.@{css-prefix}-has-ctrl-key & {
           cursor: pointer;
         }
